# Fixed: 운영 모드로 변경

--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>beestock-parent-dev</artifactId>
+        <artifactId>beestock-parent</artifactId>
         <groupId>com.beestock</groupId>
-        <version>1.8.9-SNAPSHOT</version>
+        <version>1.8.9</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>beestock-web-dev</artifactId>
-    <version>1.8.9-SNAPSHOT</version>
+    <artifactId>beestock-web</artifactId>
+    <version>1.8.9</version>
     <packaging>war</packaging>
 
     <dependencies>
 
         <dependency>
-            <artifactId>beestock-core-dev</artifactId>
+            <artifactId>beestock-core</artifactId>
             <groupId>com.beestock</groupId>
-            <version>1.8.9-SNAPSHOT</version>
+            <version>1.8.9</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring -->
@@ -186,7 +186,7 @@
                     <packagingExcludes>
                         <!--메모리 누수가 있다고 톰캣의 bin/lib에 해당 jar를 넣어놓으라는 메세지를 반영함-->
                         WEB-INF/lib/postgresql-42.2.14.jre7.jar
-<!--                        js/dev/**-->
+                        js/dev/**
                     </packagingExcludes>
                 </configuration>
             </plugin>
