Fix: - 정렬쿼리에서(기존에는 문제없었음) 갑자기 에러가 발생하는데, Postgres 버그로 추측하고 있어 정렬쿼리 제거 - 프로필분석 왼쪽 차트 클릭시 매수매도금액 권한에따라서 잘 표시되지 않던 문제개선

--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>beestock-parent-dev</artifactId>
         <groupId>com.beestock</groupId>
-        <version>1.9.7-SNAPSHOT</version>
+        <version>1.9.8-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beestock-web-dev</artifactId>
-    <version>1.9.7-SNAPSHOT</version>
+    <version>1.9.8-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <dependencies>
@@ -18,7 +18,7 @@
         <dependency>
             <artifactId>beestock-core-dev</artifactId>
             <groupId>com.beestock</groupId>
-            <version>1.9.7-SNAPSHOT</version>
+            <version>1.9.8-SNAPSHOT</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring -->
@@ -185,7 +185,7 @@
                     -->
                     <packagingExcludes>
                         <!--메모리 누수가 있다고 톰캣의 bin/lib에 해당 jar를 넣어놓으라는 메세지를 반영함-->
-                        WEB-INF/lib/postgresql-42.2.14.jre7.jar
+                        WEB-INF/lib/postgresql-42.3.1.jar
 <!--                        js/dev/**-->
                     </packagingExcludes>
                 </configuration>
