--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,20 @@
     <parent>
         <artifactId>beestock-parent-dev</artifactId>
         <groupId>com.beestock</groupId>
-        <version>1.9.15-SNAPSHOT</version>
+        <version>1.9.16-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beestock-web-dev</artifactId>
-    <version>1.9.15-SNAPSHOT</version>
+    <version>1.9.16-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <dependencies>
 
         <dependency>
-            <artifactId>beestock-core-dev</artifactId>
+            <artifactId>beestock-core-dev</artifactId>'
             <groupId>com.beestock</groupId>
-            <version>1.9.15-SNAPSHOT</version>
+            <version>1.9.16-SNAPSHOT</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring -->
